# HeteroRL

./: Config.py  PerfPopulator.py  README.md  alg_hp.json  alg_hp2.json  custom_mapping2.json  fpga_spec.json  install_env.yml  run.py  run_continuous.py  run_sys_composer.sh
Alg_examples/: README.md
Alg_examples/ddpg_lunarlander/: Config.py  ddpg_ll.py
Alg_examples/dqn_cp/: dqn_mlp_cartpole.py
Alg_examples/dqn_pong/: pong-cnn-out.txt
CartPole/: cp_rd.py
CartPole/DevC_Init_notorch/: CMakeLists.txt  Commands_Note.txt  sample.json
CartPole/DevC_Init_notorch/src/: CMakeLists.txt  CartPole.cpp
CartPole/DevC_Init_torch/: CMakeLists.txt  CP_1api.cpp  CP_notorch.cpp  CartPole.cpp  build.sh
CartPole/DevC_omp_sim/: Commands_Note.txt
CartPole/DevC_omp_sim/src/: CMakeLists.txt  main.cpp
CartPole/Init/: CMakeLists.txt  CartPole.cpp  build.sh
CartPole/Kalu/: README.md  dqn_mlp_cartpole.py  notorchout
CartPole/Kalu/ddpg_mountcar/: ddpg_mountcar.py
CartPole/Kalu/ddpg_pong/: pong-cnn-out.txt
CartPole/Kalu/dqn_cp/: run_batches.sh
CartPole/MLP_Policy/: dqn.cpp  note.txt
CartPole/Replay_nary/: CMakeLists.txt  note.txt  sum_tree_base.cpp  sum_tree_nary.cpp  sum_tree_nary.h
CartPole/Replay_stdpq/: CMakeLists.txt  PER.cpp  PER.h  note.txt
Libs_1API/DNN-IntelGPU/MLP_Policy/: mlp.py  my_note.txt  run.sh
Libs_1API/DNN-IntelGPU/MLP_sycl/: MLP_train_sycl.cpp  README.md
Libs_1API/DNN/CNN_Policy/: README.md  a.out  cnn.py
Libs_1API/DNN/CNN_Policy/src/: dqn.h  learner.cpp  learner.h
Libs_1API/DNN/MLP_Policy/: CMakeLists.txt  README.md  mlp.py  mlp_dqn.py
Libs_1API/DNN/MLP_Policy/src/: dqn.h  learner.cpp  learner.h  learner_kalu.cpp
Libs_1API/FPGA-Learner+Replay/: Makefile.fpga  README.md
Libs_1API/FPGA-Learner+Replay/src/: LR_fpga_lib.cpp  host.cpp  host_LR.cpp  host_buffer_customizable.cpp  rmm.hpp
Libs_1API/MLP_FPGA/: CMakeLists.txt  Makefile.fpga  README.md  mlp-buffers.fpga_emu
Libs_1API/MLP_FPGA/src/: CMakeLists.txt  autorun.hpp  host.cpp  host_buffer.cpp  host_mm.cpp  matmul.hpp  mlptrain.hpp
Libs_1API/MLP_FPGA_cusomizable/: Makefile.fpga
Libs_1API/MLP_FPGA_cusomizable/src/: host_buffer_customizable.cpp  mlptrain_customizable.hpp
Libs_1API/Replay/: CMakeLists.txt  README.md  prioritized_replay.cpp  prioritized_replay.h  replay_buffer_base.cpp  replay_buffer_base.h  replay_cgpu.py  sum_tree_base.h  sum_tree_nary.cpp  sum_tree_nary.h  syn_gen.py  test_replay.py  type.h  uniform_replay.cpp  uniform_replay.h
Libs_1API/Replay-FPGA/: Makefile  host.cpp  rmm.hpp
Libs_1API/Replay-FPGA-autorun/: CMakeLists.txt  Makefile  README.md
Libs_1API/Replay-FPGA-autorun/src/: autorun.hpp  host.cpp  rmm.hpp
Libs_1API/Replay-FPGA-float/: README.md  host.cpp  rmm.hpp
Libs_1API/Replay-FPGA-float/src/: CMakeLists.txt  host.cpp  rmm.hpp
Libs_1API/Replay-FPGA-hw/: Makefile.fpga  README.md
Libs_1API/Replay_notorch/: README.md  sum_tree_nary.cpp  sum_tree_nary.h
Libs_1API/buffer_replay_hwtest/: Makefile.fpga
Libs_1API/buffer_replay_hwtest/src/: autorun.hpp  host.cpp
Libs_1API/buffer_replay_hwtest/src/include/: exception_handler.hpp
Libs_Torch/: ddpg_learner.py  dqn_learner.py  replay.py
MP_runtime/: README.md  mp_train_AL.py  mp_train_LR.py  mp_train_learner.py  mp_train_learner_per_2.py  policy.py  policy_dqn.py  replay.py  serial_baseline_dqn_mlp.py  serial_baseline_pyt.py  test_replay.py
MP_runtime/alg_examples_serial/: README.md
MP_runtime/alg_examples_serial/ddpg_mountcar/: mylog.txt
MP_runtime/alg_examples_serial/dqn_cp/: dqn_mlp_cartpole.py
MP_runtime/alg_examples_serial/dqn_pong/: dqn_pong.py  mylog.txt  pong-cnn-out.txt
SysConfig/: BW.csv  FPGA_perfmodel.py  PT.csv  SysCon.py  mapping.json
pybind/: Makefile.fpga  README.md  host_dpcpp.cpp  replay_cpplib.cpp
pybind/py-sycl/: MLP_train_sycl2.cpp  README.md  replay_top.py  sum_tree_base.cpp  sum_tree_base.h  sum_tree_nary.cpp  sum_tree_nary.h  test_binded_lib_rm.py
pybind/py-sycl-fpga/: bindings.cpp  test_binded_lib.py  test_binded_lib2_formp.py
pybind/pysycl/: MLP_train_sycl.cpp  README.md  bindings_learner.cpp  bindings_learner2.cpp  bindings_replay.cpp  replay_top.py  test_binded_lib.py  test_binded_lib_learner2.py
pybind/pysyclfpga/: replay_top.py
